--- a/public/wp-content/themes/shocoon/css/custom.css
+++ b/public/wp-content/themes/shocoon/css/custom.css
@@ -309,17 +309,18 @@ header .row-fluid{
 
 .met_logo img{
 	max-height: 150px;
+	margin-top:23px !important;
 }
 
 header {
-	height : 150px;
+	height : 103px;
 	position   : relative;
 	z-index    : 2;
 }
 
 header aside {
 	float      : right;
-	margin-top : 64.5px;
+	margin-top : 46.5px;
 }
 
 header aside > a {
@@ -356,7 +357,7 @@ header aside > nav li a {
 	Main Menu
  ------------------------------*/
 .met_main_nav {
-	margin-bottom : 30px;
+	margin-bottom : 15px;
 	z-index       : 4;
 	position      : relative;
 }
@@ -488,7 +489,7 @@ header aside > nav li a {
 }
 
 .met_main_nav a {
-	line-height : 60px;
+	line-height : 52px;
 	padding     : 0 25px;
 	color       : #FFFFFF;
 	display     : inline-block;
@@ -553,7 +554,7 @@ header aside > nav li a {
 	left: 13px;
 	top: 0;
 	font-size: 14px;
-	line-height: 60px;
+	line-height: 54px;
 }
 
 .met_menu_search_wrapper {
@@ -629,6 +630,7 @@ header aside > nav li a {
  ------------------------------*/
 .met_slider_wrap {
 	position : relative;
+	border:1px solid #c3d6d4;
 }
 
 .met_slider_overlay {
@@ -5398,6 +5400,10 @@ code, pre{font-size: 12px}
 	border-right:1px solid #d2202b;
 	padding-right:10px;
 }
+.border-left{
+	border-left:1px solid #d2202b;
+	padding-left:10px;
+}
 
 .bottom-events-content{
 	padding-left:5px;
@@ -5420,7 +5426,7 @@ code, pre{font-size: 12px}
 	color:#d2202b;
 	margin-top:10px;
 	font-size:18px;
-	text-align:right;
+	text-align:center;
 	font-weight:600;
 }
 .venue{
@@ -5432,7 +5438,7 @@ code, pre{font-size: 12px}
 .date{
 	font-size:12px;
 	color:#d2202b;
-	text-align:right;
+	text-align:center;
 	margin-top:6px;
 	font-weight:600;
 }
@@ -5516,8 +5522,8 @@ text-align:center;
 }
 
 .envelope-header{
-	padding: 16px;
-color: #fff;
+	padding: 14px;
+    color: #fff;
 }
 
 .half_width_49 {
@@ -5563,4 +5569,43 @@ color: #fff;
 }
 .padding-5{
 	padding:5px;
+}
+.textarea-height{
+	height:110px !important;
+}
+
+/*Participating form*/
+
+.enquiry_select {
+    border: none;
+    background-color: #73767d;
+    box-shadow: none;
+    padding: 0 10px;
+    height: 40px;
+    line-height: 40px;
+    width: 100%;
+    display: block;
+    color: #a5a9a9;
+    border-radius: 0;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -khtml-box-sizing: border-box;
+    resize: none;
+}
+
+.etailer{
+	border:1px solid #eee;
+	padding:20px;
+	
+}
+.margin-bottom-30{
+	margin-bottom:30px;
+}
+.envelop-link{
+	padding:0px !important;
+}
+.envelop-link-a{
+	padding:0px 19px !important;
 }
